Update documentation and style